--- a/pop.css
+++ b/pop.css
@@ -214,3 +214,18 @@ animation-fill-mode: forwards;}
 #bottom_wave{
   transform: rotate(180deg);
 }
+
+
+.waves_divide2{
+  display: block;
+  width: 100%;
+  height: 6px;
+  max-height: 12px;
+  margin-top: 5px;
+  margin-bottom: 25px;
+  z-index:5;
+  bottom:0;
+  
+  left:0px;
+  float:left;
+}
