--- a/pop.css
+++ b/pop.css
@@ -211,17 +211,17 @@ animation-fill-mode: forwards;}
   transform: translateY(-125%);
 }
 
-#bottom_wave{
+.bottom_wave{
   transform: rotate(180deg);
 }
 
 
-.waves_divide2{
+.waves_divide_small{
   display: block;
   width: 100%;
-  height: 6px;
-  max-height: 12px;
-  margin-top: 5px;
+  height: 25px;
+  max-height: 35px;
+  margin-top: 25px;
   margin-bottom: 25px;
   z-index:5;
   bottom:0;
