--- a/style.css
+++ b/style.css
@@ -10,6 +10,16 @@
   border-right: 1px solid white;
 }
 
+.top-link{
+  color:white;
+  padding:5px; 
+  
+  align:right;
+}
+.top-link:hover{
+  color: bisque;
+}
+
 b{
   background-color: black;
   text-emphasis: none;
@@ -57,6 +67,19 @@ nav{
   text-align:center;
   color:white;
 }
+
+.list-group-vertical .list-group-item{
+  background-color: #0F0F0F;
+  color:white;
+  padding-top: 10px;
+  width: 100%;
+  left: 5%;
+}
+
+.list-group-vertical .list-group-item h5{
+  padding-top: 20px;
+}
+
 .img-fluid{
   max-width: 100%; 
   height: auto;
