--- a/pop.css
+++ b/pop.css
@@ -103,8 +103,33 @@ animation-fill-mode: forwards;}
 @-moz-keyframes SnowExampleSlide {from {position: absolute; top: -100px;} to {position: absolute; top: 633px;}}
 
 
+@keyframes coinSlide {
+  0%{
+    transform: scale(1);
+    
+  }
+  50%{
+    transform: scale(1.3);
+  }
+  100%{
+    transform: scale(1);
+  }
+}
 
 
+.coinslideContainer{
+  overflow: hidden;
+  position: relative;
+  height: 200px;
+  width: 100%;
+}
+
+.coinSlide{
+z-index: -1;
+position: absolute;
+animation: coinSlide linear infinite;
+-webkit-animation: coinSlide linear infinite;
+}
 
 
 
