--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  justify-content: space-between;
+  justify-content: center;
 }
 .icon{
   height: auto;
@@ -31,25 +31,25 @@
 }
 
 .card{
-  max-width: 400px;
-  margin-top: 5%;
-  margin-bottom: 5%;
+  width: 400px;
+  margin: 1%;
+  background-color: white;
+  color: black;
+  border-color: white;
 }
 .card-title{
   color:black;
 }
 
 .card-header{
+  background-color:#ededed;
   color:black;
   text-align: center;
   
 }
-.card-header img{
-  margin-left: 20px;
-  margin-right: 20px;
-}
+
 .card-body{
-  color:black;
+  
   margin-left: 20px;
   padding: 25px;
   
