--- a/pop.css
+++ b/pop.css
@@ -161,7 +161,7 @@ animation: coinSlide linear infinite;
   max-height: 60px;
   margin: 0;
   z-index:5;
-  bottom:0;
+  
   
   left:0px;
   float:left;
@@ -237,7 +237,7 @@ animation: coinSlide linear infinite;
 }
 
 .bottom_wave{
-  transform: rotate(180deg);
+  transform: rotate(180deg) translateY(3px);
 }
 
 
@@ -342,4 +342,46 @@ animation: coinSlide linear infinite;
   left: 100%;
   animation-delay: -2.5s;
   background-color: #f9c4ea;
+}
+
+@keyframes stake_sw{from {position: absolute; bottom: 45%; left: 45%;} to {position: absolute; bottom: -50%; left: -50%;}}
+@keyframes stake_nw{from {position: absolute; bottom: 45%; left: 45%;} to {position: absolute; bottom: 150%; left: -50%;}}
+@keyframes stake_ne{from {position: absolute; bottom: 45%; left: 45%;} to {position: absolute; bottom: 150%; left: 150%;}}
+@keyframes stake_se{from {position: absolute; bottom: 45%; left: 45%;} to {position: absolute; bottom: -50%; left: 150%;}}
+@keyframes stake_w{from {position: absolute; bottom: 45%; left: 45%;} to {position: absolute; bottom: 45%; left: -50%;}}
+@keyframes stake_e{from {position: absolute; bottom: 45%; left: 45%;} to {position: absolute; bottom: 45%; left: 150%;}}
+@keyframes stake_s{from {position: absolute; bottom: 45%; left: 45%;} to {position: absolute; bottom: -50%; left: 45%;}}
+@keyframes stake_n{from {position: absolute; bottom: 45%; left: 45%;} to {position: absolute; bottom: 150%; left: 45%;}}
+@keyframes pancakeGrow{
+  0%{filter: hue-rotate(0deg);}
+  100%{filter: hue-rotate(360deg) ;}
+}
+
+
+.pancakeGrow{
+  transform: scale(2.5);
+}
+.stake_img_sw{
+  animation: stake_sw 2s linear 2s infinite;
+}
+.stake_img_nw{
+  animation: stake_nw 2s linear 2s infinite;
+}
+.stake_img_ne{
+  animation: stake_ne 2s linear 2s infinite;
+}
+.stake_img_se{
+  animation: stake_se 2s linear 2s infinite;
+}
+.stake_img_s{
+  animation: stake_s 2s linear 2s infinite;
+}
+.stake_img_n{
+  animation: stake_n 2s linear 2s infinite;
+}
+.stake_img_e{
+  animation: stake_e 2s linear 2s infinite;
+}
+.stake_img_w{
+  animation: stake_w 2s linear 2s infinite;
 }
